# AdvancedMyShell

./: CMakeLists.txt  README.md  ReadME.txt
includes/: Input.h  VariablesManager.h  helpers.h  merrno.h  my_file_reader.h  my_functions.h  my_io.h  my_programs.h  subProcess.h  wildcard_parser.h
mycat/: main.c  my_io.c  my_io.h
mycp/: CMakeLists.txt  Readme.md  mycp.cpp  utils.cpp  utils.h
mygrep/: CMakeLists.txt  main.cpp
mygrep/inc/: arg_reader.h  myprint.h
mygrep/src/: arg_reader.cpp  myprint.cpp
myls/: CMakeLists.txt  main.cpp
myls/headers/: File.h  FilesManagement.h  arguments_reader.h  wildcard_parser.h
myls/sources/: File.cpp  FilesManagement.cpp  arguments_reader.cpp  wildcard_parser.cpp
mymkdir/: CMakeLists.txt  README.txt.txt  main.cpp
mymkdir/Inc/: argument_manager.h  folder_creator.h
mymkdir/Src/: argument_manager.cpp  folder_creator.cpp
mymv/: CMakeLists.txt  Readme.md  mymv.cpp  utils.cpp  utils.h
myrm/: CMakeLists.txt  main.cpp
myrm/inc/: args_manager.h
myrm/src/: args_manager.cpp  argument_manager.cpp
src/: Input.cpp  VariablesManager.cpp  helpers.cpp  main.cpp  merrno.cpp  my_file_reader.cpp  my_functions.cpp  my_io.cpp  my_programs.cpp  subProcess.cpp  wildcard_parser.cpp
